them va sua icon

--- a/fastkart_flutter-master/pubspec.yaml
+++ b/fastkart_flutter-master/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/logo.png"
+  image_path: "assets/gold logo.png"
 
 
 
