--- a/fastkart_flutter-master/pubspec.yaml
+++ b/fastkart_flutter-master/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
   firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
+  cloud_firestore: ^3.1.17
 
 flutter_icons:
   android: "launcher_icon"
